--- a/Yuji v1.1
+++ b/Yuji v1.1
@@ -1,6 +1,6 @@
 
 loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Monkey'))()
 task.wait(0.1)
-loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Shinjuku%20yuji%20v1.1'))()
+loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Jujutsu%20shenanigans'))()
 task.wait(0.1)
 loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Spawnidk'))()
