--- a/Yuji v1.1
+++ b/Yuji v1.1
@@ -1,5 +1,5 @@
 
-loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Monkey'))()
+loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Yes%20yes'))()
 task.wait(0.1)
 loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Jujutsu%20shenanigans'))()
 task.wait(0.1)
