--- a/Yuji v1.1
+++ b/Yuji v1.1
@@ -1,5 +1,4 @@
-
-loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Jujutsu%20shenanigans'))()
+loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Yuji%20fish'))()
 
 task.wait(0.1)
 loadstring(game:HttpGet('https://raw.githubusercontent.com/Kenjihin69/Kenjihin69/refs/heads/main/Yes%20yes'))()
